<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ActBoasVindas"
    android:orientation="vertical"
    android:background="#E9E5DC"
    android:baselineAligned="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblBemVindo01"
        android:id="@+id/lblBemVindo01"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:fontFamily="arial"
        android:textSize="36dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblBemVindo02"
        android:id="@+id/lblBemVindo02"
        android:layout_gravity="center_horizontal"
        android:fontFamily="arial"
        android:textSize="26dp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblBemVindo03"
        android:id="@+id/lblBemVindo03"
        android:layout_gravity="center_horizontal"
        android:fontFamily="arial"
        android:textSize="26dp"
        android:textStyle="bold" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblVersaoApk"
        android:id="@+id/lblVersaoApk"
        android:layout_gravity="center_horizontal"
        android:fontFamily="arial"
        android:textStyle="bold"
        android:textSize="14dp"
        android:textColor="#000000" />
</LinearLayout>
